# project-backtest

./: .env.example  .gitignore  LICENSE  README.md  etf_backtest.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_page_runner.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
apps/dashboard/: Home.py  common.py
apps/dashboard/pages/: 1_compare.py  2_drawdown.py  3_dca.py  4_universe.py  5_market_explorer.py
config/: assets.yaml  proxies.yaml  settings.yaml
pages/: 1_Compare.py  2_Drawdown.py  3_DCA.py  4_Universe.py  5_Market_Explorer.py
scripts/: predeploy_check.py  run_dashboard.py  sync_symbol_catalog.py  update_data.py  warm_cache.py
src/backtesting/: __init__.py  config.py
src/backtesting/analytics/: alignment.py  returns.py  risk.py
src/backtesting/charts/: plotly.py
src/backtesting/data/: cache.py  fetch.py  normalize.py  symbol_store.py
src/backtesting/data/providers/: twelvedata.py  yahoo.py
src/backtesting/domain/: assets.py  instruments.py  proxy_rules.py
src/backtesting/services/: compare.py  explorer.py
src/project_backtesting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/analytics/: test_returns.py
tests/data/: test_symbol_store.py
tests/services/: test_compare.py  test_explorer.py
